Complete shopkeeper part 1 steps

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   <section id="status"></section>
   <section id="inventory"></section>
   <section id="controls"><button id="next-day">Next Day</button>
-<button id="clean">Clean Shop</button></section>
+<button id="clean">Clean Shop</button>
+<button id="open-shop">Open Shop</button></section>
   <section id="report"></section>
   <section id="log"></section>
 
