--- a/index.html
+++ b/index.html
@@ -11,9 +11,31 @@
 
   <section id="status"></section>
   <section id="inventory"></section>
-  <section id="controls"><button id="next-day">Next Day</button>
-<button id="clean">Clean Shop</button>
-<button id="open-shop">Open Shop</button></section>
+  <section id="controls">
+    <button id="next-day">Next Day</button>
+    <button id="clean">Clean Shop</button>
+    <button id="open-shop">Open Shop</button>
+    <button id="promo">Run Promotion</button>
+  </section>
+
+  <section id="orders">
+  <h2>Order Stock</h2>
+
+  <label>
+    Item:
+    <select id="order-item">
+      <option value="coffee">Coffee</option>
+      <option value="bagel">Bagel</option>
+    </select>
+  </label>
+
+  <label>
+    Quantity:
+    <input id="order-qty" type="number" value="1" min="1" max="20">
+  </label>
+
+  <button id="order-button">Place Order</button>
+</section>
   <section id="report"></section>
   <section id="log"></section>
 
